--- a/test.html
+++ b/test.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
-    <script src="JS/smoketesting.js"></script>
+    <!--<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>-->
+    <!--<script src="JS/smoketesting.js"></script>-->
+    <script src="dist/test.js"></script>
 </head>
 
 <body>
-<script>
+<!--<script>
     $(function () {
         var _config = {
             url:[{
@@ -60,7 +61,7 @@
         SmokeTest.Init(_config);
         SmokeTest.Start();
     })
-</script>
+</script>-->
 
 </body>
 </html>
