--- a/test.html
+++ b/test.html
@@ -3,65 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <!--<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>-->
+    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
     <!--<script src="JS/smoketesting.js"></script>-->
     <script src="dist/test.js"></script>
 </head>
 
 <body>
-<!--<script>
-    $(function () {
-        var _config = {
-            url:[{
-                name: '首页',
-                url:'index.html',
-                selector:{
-                    query:'spa',
-                    attr:'href'
-                }
-            },{
-                url:'index.html',
-                selector:{
-                    query:'.footer span',
-                    attr:'html'
-                }
-            },{
-                url:'index.html',
-                selector:{
-                    query:'.footer span',
-                    attr:'html'
-                }
-            },{
-                url:'index.html',
-                selector:{
-                    query:'.footer span',
-                    attr:'html'
-                }
-            },{
-                url:'index.html',
-                selector:{
-                    query:'.footer span',
-                    attr:'html'
-                }
-            },{
-                url:'index.html',
-                selector:{
-                    query:'.footer span',
-                    attr:'html'
-                }
-            },{
-                url:'index.html',
-                selector:{
-                    query:'.footer span',
-                    attr:'html'
-                }
-            }],
-            error: 1
-        };
-        SmokeTest.Init(_config);
-        SmokeTest.Start();
-    })
-</script>-->
 
 </body>
 </html>
